[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "piranha"
authors = [{name = "Jorge Cardona", email = "jorge@cardona.co"}]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.7"
dynamic = ["version", "description"]
dependencies = [
  "requests>=2.27",
  "unidecode>=1.3"
]

[project.scripts]
report = "flit:report"

[project.urls]
Source = "https://gitlab.com/jorgeecardona/piranha"
Documentation = "https://piranha.readthedocs.io/en/latest"
Issues = "https://gitlab.com/jorgeecardona/piranha/-/issues"


[project.optional-dependencies]
test = [
     "requests-mock",
     "mockfs",
     "pytest",
     "pytest-cov",
     "coverage"
]

py37 = [
     "shared-memory38"
]

docs = [
    "mkdocs",
    "mkdocstrings",
    "pytkdocs[numpy-style]",
    "mkdocs-include-markdown-plugin"
]

# pyproject.toml
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "INFO"